<resources>
    <string name="app_name">Werk</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_google">Sign in with google</string>
    <string name="sign_up_email">Sign up with email</string>
    <string name="account_exists"><u>Already have an account? Log In!</u></string>
    <string name="welcome">Welcome to Werk!</string>
    <string name="logo">Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_desc">You are almost there!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="werk">Werk</string>
    <string name="upcoming">UPCOMING</string>
    <string name="ongoing">ONGOING</string>
    <string name="completed">COMPLETED</string>
    <string name="werk_sessions">Werk Sessions</string>
    <string name="start_session">Start Session</string>
    <string name="session_name">Session Name</string>
    <string name="create_a_session">Create a Session</string>
    <string name="join_a_session">Join a Session</string>
    <string name="qr_code">QR Code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="or_line">Or line</string>
    <string name="code">Enter Code</string>
    <string name="join">Join</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="description">Description</string>
    <string name="enter_a_description">Enter a Description…</string>
    <string name="next">Next</string>
    <string name="invite">Invite</string>
    <string name="members">Members</string>
    <string name="add">Add</string>
    <string name="team_code">Session Code</string>
    <string name="allow_team_members_to_create_tasks">Allow team members to create tasks?</string>
    <string name="all_done_lets_go">All done, Lets Go!</string>
    <string name="session">Session</string>
    <string name="chat">Chat</string>
    <string name="walkie_talkie">Walkie Talkie</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="total_time_elapsed">Total time elapsed</string>
    <string name="_04_20">00 : 00</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="i_m_done">I\'m Done!</string>
    <string name="task_title">Task Title</string>
    <string name="back_button">Back Button</string>
    <string name="hrs">HRS</string>
    <string name="start">Start</string>
    <string name="done">Done</string>
    <string name="task_description">Task Description</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="modify_members">Modify Members</string>
    <string name="loading_ma_pls_wait">Loading ma, Pls wait...</string>
    <string name="profile_image">profile image</string>
    <string name="sign_out">Sign Out</string>
    <string name="total_time_spent_working">Total time spent working 🔥</string>
    <string name="all">ALL</string>
    <string name="for_you">FOR YOU</string>
    <string name="modify">Modify</string>
    <string name="task_assigned_to">Task Assigned To</string>
    <string name="nothing_here_yet">Nothing here yet 😕</string>
    <string name="allow_team_members_to_assign_tasks">Allow team members to assign tasks?</string>
    <string name="session_details">Session Details</string>
    <string name="participant_details">Participant Details</string>
    <string name="participant_emails">Participant Emails</string>
    <string name="share">Share</string>
    <string name="create_a_task">Create a Task</string>
    <string name="you">You</string>
    <string name="total_points">Total Points</string>
    <string name="title">Title</string>
    <string name="task_expected_duration_minutes">Task expected duration (minutes)</string>
    <string name="points_for_this_task">Points for this task</string>
    <string name="create">Create</string>
    <string name="start_typing">Start typing...</string>
    <string name="message">Message</string>
    <string name="be_the_first_one_to_message">Be the first one to message 😉</string>
    <string name="terminate_task">Terminate Task</string>
    <string name="more_options">More options</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="email_to_registered_email">Enter your registered email on which you wish to receive the link to reset password!</string>
    <string name="submit">Submit</string>
    <string name="expected_duration">Expected Duration</string>
    <string name="mins_secs">MINS : SECS</string>
</resources>