<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.overview.JoinSessionFragment">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/details_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="32dp"
                    android:paddingVertical="48dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/scan_qr_layout"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/qr_code"
                        android:src="@drawable/ic_qr"
                        app:tint="@color/red" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/scan_qr_code"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="32dp"
                        android:contentDescription="@string/or_line"
                        android:src="@drawable/or" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/code_input"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/code">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/white" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/join_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="24dp"
                        android:padding="8dp"
                        android:text="@string/join" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>