<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.overview.InviteFragment">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:text="@string/team_code"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/session_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="04f0fb4cdd"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="48dp"
                android:contentDescription="@string/or_line"
                android:src="@drawable/or" />

            <ImageView
                android:id="@+id/qr_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/or_line"
                android:src="@drawable/sampleqr" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/share_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:text="@string/share"
                app:icon="@drawable/ic_share" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:padding="12dp"
                android:text="@string/all_done_lets_go" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>