<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.WelcomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_text"
        android:contentDescription="@string/logo"
        android:layout_marginVertical="24dp"/>

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        android:text="@string/welcome"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textStyle="bold"
        android:layout_margin="16dp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="32dp"
            android:paddingVertical="48dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/google_sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/sign_up_google" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/email_sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_gray"
                android:padding="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/sign_up_email" />

            <TextView
                android:id="@+id/account_exists_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:textStyle="bold"
                android:padding="4dp"
                android:text="@string/account_exists"
                android:textAppearance="?attr/textAppearanceBody2"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>